--- a/config/caddy/Caddyfile
+++ b/config/caddy/Caddyfile
@@ -42,6 +42,10 @@ http://sso.celine.localhost {
   reverse_proxy host-gw:4180
 }
 
+http://mqtt.celine.localhost {
+  reverse_proxy host-gw:1884
+}
+
 http://datasets.celine.localhost {
   import auth
   reverse_proxy host-gw:8000
@@ -62,6 +66,21 @@ http://policies.celine.localhost {
   reverse_proxy host-gw:8009
 }
 
-http://mqtt.celine.localhost {
-  reverse_proxy host-gw:1884
+http://api.celine.localhost {
+
+  handle_path /datasets* {
+    reverse_proxy host-gw:8000
+  }
+
+  handle_path /dt* {
+    reverse_proxy host-gw:8002
+  }
+
+  handle_path /rec-registry* {
+    reverse_proxy host-gw:8004
+  }
+
+  handle_path /policies* {
+    reverse_proxy host-gw:8009
+  }
 }
