chore: update refs, repo:start also --build docker images

--- a/taskfile.yaml
+++ b/taskfile.yaml
@@ -36,7 +36,7 @@ tasks:
           case "$name" in
             *"$pattern"*)
               echo "==> starting $name"
-              (cd "$d" && docker compose up -d)
+              (cd "$d" && docker compose up -d --build)
               matched=1
               ;;
           esac
